<resources>
    <string name="app_name">Stratus</string>
    <string name="app_preferences">AppPreferences</string>
    <string name="snackbar_dismiss_action">Dismiss</string>

    <!--  Login  -->
    <string name="login_edittext_username_hint">Username</string>
    <string name="login_edittext_password_hint">Password</string>
    <string name="login_imageview_desc">StratusLogo</string>
    <string name="login_button_text">Login</string>
    <string name="login_textview_text">Don\'t have an account? <b>Sign up now!</b></string>

    <!--  Register  -->
    <string name="register_imageview_desc">RegisterLogo</string>
    <string name="register_edittext_username_hint">Username</string>
    <string name="register_edittext_password_hint">Password</string>
    <string name="register_edittext_confirm_password_hint">Confirm password</string>
    <string name="register_edittext_email_hint">Email</string>
    <string name="register_button_done_text">Done</string>
    <string name="register_button_go_back_text">Go back</string>

    <!-- Dashboard -->
    <string name="dashboard_bottomnav_contacts">Contacts</string>
    <string name="dashboard_bottomnav_search_user">Search</string>
    <string name="dashboard_bottomnav_notifications">Notifications</string>

    <!-- Contacts -->
    <string name="contacts_default_name">Default</string>
    <string name="contact_avatar_mock">ContactAvatarMock</string>
    <string name="contact_remove">ContactRemove</string>
</resources>
