<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/contacts_item_card_view"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:elevation="24dp"
        app:cardBackgroundColor="@color/grey_darken_4"
        app:cardUseCompatPadding="true"
        app:contentPadding="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="389dp"
            android:layout_height="53dp">

            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contacts_default_name"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.178"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.526" />

            <ImageView
                android:id="@+id/contact_avatar"
                android:layout_width="42dp"
                android:layout_height="32dp"
                android:contentDescription="@string/contact_avatar_mock"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/contact_name"
                app:layout_constraintHorizontal_bias="0.4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                app:srcCompat="@drawable/ic_baseline_person_pin_24" />

            <ImageButton
                android:id="@+id/contact_remove_button"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:background="@color/grey_darken_4"
                android:contentDescription="@string/contact_remove"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.926"
                app:layout_constraintStart_toEndOf="@+id/contact_name"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_person_remove_alt_1_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</FrameLayout>